added lombok slf4j dep